--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -5,20 +5,20 @@ import Layout from '@layouts/SimpleLayout.astro'
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="test Me" description="Lorem ipsum dolor sit amet">
     <div class="stack">
-        <div class="box">
-            <div class="box"><h4>stack box</h4></div>
+        <div class="box-no-border-no-border">
+            <div class="box-no-border-no-border"><h4>stack box</h4></div>
 
-            <div class="box">
+            <div class="box-no-border invert">
                 <p>
-                    STACK 1 ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Vitae ultricies leo integer malesuada nunc vel risus
-                    commodo viverra.
+                    Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Vitae ultricies leo integer malesuada nunc vel risus commodo
+                    viverra.
                 </p>
             </div>
         </div>
 
-        <div class="box">
+        <div class="box-no-border">
             <h4>box level2</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
@@ -27,10 +27,12 @@ import Layout from '@layouts/SimpleLayout.astro'
                 distinctio dolores repudiandae modi?
             </p>
 
-            <buton type="button" class="button center">button</buton>
+            <dib class="box-no-border-no-border">
+                <buton type="button" class="button center">button</buton></dib
+            >
         </div>
 
-        <div class="box">
+        <div class="box-no-border">
             <h4>box level2</h4>
             <ul>
                 <li>Item 1</li>
@@ -40,16 +42,16 @@ import Layout from '@layouts/SimpleLayout.astro'
             <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
         </div>
 
-        <div class="box">
+        <div class="box-no-border">
             boxipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies
             leo integer malesuada nunc vel risus commodo viverra.
 
-            <div class="box">
+            <div class="box-no-border">
                 <h4>box level2</h4>
                 Sagittis purus sit amet volutpat. Netus et malesuada fames ac
             </div>
-            <div class="box">
+            <div class="box-no-border">
                 <h4>box level2</h4>
                 <ul>
                     <li>Item 1</li>
@@ -62,16 +64,16 @@ import Layout from '@layouts/SimpleLayout.astro'
                 </p>
             </div>
         </div>
-        <div class="box">
+        <div class="box-no-border">
             box ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
             ultricies leo integer malesuada nunc vel risus commodo viverra.
 
-            <div class="box">
+            <div class="box-no-border">
                 <h4>box level2</h4>
                 Sagittis purus sit amet volutpat. Netus et malesuada fames ac
             </div>
-            <div class="box">
+            <div class="box-no-border">
                 <h4>box level2</h4>
                 <ul>
                     <li>Item 1</li>
@@ -87,7 +89,7 @@ import Layout from '@layouts/SimpleLayout.astro'
     </div>
 
     <div class="stack-large">
-        <div class="box">
+        <div class="box-no-border">
             <h4>stack-large box</h4>
             <p>
                 STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -109,8 +111,8 @@ import Layout from '@layouts/SimpleLayout.astro'
         <div class="stack-small box">
             <h4>box</h4>
             <p>
-                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                xxx 1 ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Vitae ultricies leo integer malesuada nunc vel risus commodo
                 viverra.
             </p>
