--- a/src/components/Switcher.astro
+++ b/src/components/Switcher.astro
@@ -2,40 +2,23 @@
 
 ---
 
-<h2>Switcher</h2>
-<p>
-    especially useful where each element should be considered equal, or part of
-    a continuum.
-</p>
-<div class="switcher">
-    <div class="box wrapper">5</div>
-    <div class="box wrapper">4</div>
-    <div class="box wrapper">3</div>
-    <div class="box wrapper">2</div>
-    <div class="box wrapper">1</div>
+<div class="box-no-border">
+    <p>
+        <code>.switcher</code> - especially useful where each element should be considered
+        equal, or part of a continuum.
+    </p>
+</div>
+<div class="center">
+    <div class="switcher">
+        <div class="box filled"></div>
+        <div class="box filled"></div>
+        <div class="box filled"></div>
+    </div>
 </div>
 
 <style>
-    .switcher {
-        display: flex;
-        flex-wrap: wrap;
-        gap: var(--s1);
-        --threshold: 30rem;
-
-        /* optional */
-        > * {
-            flex-grow: 1;
-            flex-basis: calc((var(--threshold) - 100%) * 999);
-        }
-
-        /* we are applying a flex-basis of 100% to each element, only where there are five or more elements in total.  */
-        > :nth-last-child(n + 5),
-        > :nth-last-child(n + 5) ~ * {
-            flex-basis: 100%;
-        }
-    }
-
-    .wrapper {
-        border: var(--border-size-1) solid var(--orange-18);
+    .filled {
+        inline-size: 10rem;
+        background-color: var(--pink-3);
     }
 </style>
