--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,69 +4,20 @@ import Layout from '@layouts/SimpleLayout.astro'
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
-    <div class="stack-large">
-        <div class="box">
-            <div class="box">
-                <h4>stack box</h4>
-                <code> class="box center"</code>
-                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
-                ultricies leo integer malesuada nunc vel risus commodo viverra.
-            </div>
-
-            <div class="stack-small">
-                <div class="box">
-                    <h4>box level2</h4>
-                    Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-                </div>
-
-                <buton type="button" class="button center">button</buton>
-            </div>
-
-            <div class="box">
-                <h4>box level2</h4>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
-                <p>
-                    Sagittis purus sit amet volutpat. Netus et malesuada fames
-                    ac
-                </p>
-            </div>
+    <div class="stack">
+        <div class="box-no-border">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Dolorem exercitationem inventore, nihil amet officiis tenetur
+                voluptas debitis reprehenderit asperiores cupiditate eum
+                doloribus eos magnam voluptates suscipit praesentium recusandae
+                magni nulla.
+            </p>
         </div>
-        <div class="box">
-            boxipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies
-            leo integer malesuada nunc vel risus commodo viverra.
-
-            <div class="box">
-                <h4>box level2</h4>
-                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-            </div>
-            <h4>box level2</h4>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ul>
-            <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
+        <div class="box invert">
+            <p>Invert purus sit amet volutpat. Netus et malesuada fames ac</p>
         </div>
-        <div class="box">
-            box ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
-            ultricies leo integer malesuada nunc vel risus commodo viverra.
-
-            <h4>box level2</h4>
-            Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-
-            <h4>xxx</h4>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ul>
+        <div class="box-no-border">
             <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
         </div>
     </div>
