--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -110,28 +110,15 @@ import 'open-props/postcss/buttons'
 
         --ratio: 1.5;
 
-        /* --s-5: calc(var(--s-4) / var(--ratio));
-        --s-4: calc(var(--s-3) / var(--ratio));
-        --s-3: calc(var(--s-2) / var(--ratio));
-        --s-2: calc(var(--s-1) / var(--ratio));
-        --s-1: calc(var(--s0) / var(--ratio));
         --s0: 1rem;
-        --s1: calc(var(--s0) * var(--ratio));
-        --s2: calc(var(--s1) * var(--ratio));
-        --s3: calc(var(--s2) * var(--ratio));
-        --s4: calc(var(--s3) * var(--ratio));
-        --s5: calc(var(--s4) * var(--ratio)); */
-
-        --s0: 1rem;
+        --s1: calc(var(--s0) * pow(var(--ratio), 1));
         --s2: calc(var(--s0) * pow(var(--ratio), 2));
         --s3: calc(var(--s0) * pow(var(--ratio), 3));
         --s4: calc(var(--s0) * pow(var(--ratio), 4));
         --s5: calc(var(--s0) * pow(var(--ratio), 5));
 
-        --brand-light: var(--orange-18);
-
         /* open-props light theme as defaults but these are better */
-        --text-1-light: var(--gray-8);
+        /* --text-1-light: var(--gray-8);
         --text-2-light: var(--gray-7);
         --surface-1-light: var(--gray-0);
         --surface-2-light: var(--gray-1);
@@ -139,17 +126,14 @@ import 'open-props/postcss/buttons'
         --surface-4-light: var(--gray-3);
 
         --surface-shadow-light: var(--gray-8-hsl);
-        --shadow-strength-light: 2%;
+        --shadow-strength-light: 2%; */
 
         color-scheme: light dark;
-
-        --brand: var(--brand-light);
     }
 
     [color-scheme='light'] {
         color-scheme: light;
 
-        --brand: var(--brand-light);
         --text-1: var(--text-1-light);
         --text-2: var(--text-2-light);
         --surface-1: var(--surface-1-light);
@@ -158,12 +142,14 @@ import 'open-props/postcss/buttons'
         --surface-4: var(--surface-4-light);
         --surface-shadow: var(--surface-shadow-light);
         --shadow-strength: var(--shadow-strength-light);
+
+        --brand: var(--brand-light);
+        --border-color: var(--brand-light);
     }
 
     [color-scheme='dark'] {
         color-scheme: dark;
 
-        --brand-dark: var(--orange-3);
         --text-1: var(--text-1-dark);
         --text-2: var(--text-2-dark);
         --surface-1: var(--surface-1-dark);
@@ -173,7 +159,8 @@ import 'open-props/postcss/buttons'
         --surface-shadow: var(--surface-shadow-dark);
         --shadow-strength: var(--shadow-strength-dark);
 
-        --brand-dark: var(--orange-3);
+        --brand: var(--brand-dark);
+        --border-color: var(--color-light);
 
         /* open-props dark theme as defaults but these are better */
     }
@@ -221,8 +208,15 @@ import 'open-props/postcss/buttons'
         /* top and bottom margins in horizontal-tb writing mode */
         margin-block: 0;
     }
-    .stack > * + * {
-        margin-block-start: var(--size-5);
+
+    .stack {
+        > * + * {
+            margin-block-start: var(--size-5);
+        }
+        /* p elements after the second element towards the bottom of the space. */
+        /* > :nth-child(2) {
+            margin-block-end: auto;
+        } */
     }
 
     .stack-large > * + * {
@@ -231,10 +225,6 @@ import 'open-props/postcss/buttons'
 
     .stack-small > * + * {
         margin-block-start: var(--size-2);
-    }
-
-    .stack > :nth-child(2) {
-        margin-block-end: auto;
     }
 
     /* end stack */
@@ -249,27 +239,39 @@ import 'open-props/postcss/buttons'
     
     
     */
-    .box {
-        padding: 0;
 
+    [class^='box'] {
         color: var(--text-1);
         background-color: var(--surface-1);
-        border-width: var(--border-size-1);
-        border-color: var(--color-dark);
 
         background-color: var(--surface-4);
 
         /* outline: 0.125rem solid transparent;
         outline-offset: -0.125rem; */
-    }
-    /* BOX */
-    .box * {
-        color: inherit;
+
+        * {
+            color: inherit;
+        }
+        + .invert {
+            filter: invert(100%);
+        }
     }
 
-    .box.invert {
+    [class^='box'].invert {
         filter: invert(100%);
     }
+
+    .box {
+        padding: var(--s0);
+        border-width: var(--border-size-1);
+        border-color: var(--border-color);
+    }
+    .box-no-border {
+        outline: var(--size-0) solid transparent;
+        outline-offset: (calc * var(--size-0));
+    }
+
+    /* BOX */
 
     /* CENTER  Intrinsic centering*/
 
@@ -370,11 +372,12 @@ import 'open-props/postcss/buttons'
         display: flex;
         flex-wrap: wrap;
         gap: var(--size-5);
-    }
+        --threshold: var(--size-15);
 
-    .switcher > * {
-        flex-grow: 1;
-        flex-basis: calc((--var(--size-15)- 100%) * 999);
+        > * {
+            flex-grow: 1;
+            flex-basis: calc((var(--threshold) - 100%) * 999);
+        }
     }
 
     .switcher > :nth-last-child(n + 6),
@@ -395,19 +398,19 @@ import 'open-props/postcss/buttons'
     }
 
     h1 {
-        font-size: var(--s5);
-    }
-    h2 {
         font-size: var(--s4);
     }
-    h3 {
+    h2 {
         font-size: var(--s3);
     }
-    h4 {
+    h3 {
         font-size: var(--s2);
     }
-    h5 {
+    h4 {
         font-size: var(--s1);
+    }
+    h5 {
+        font-size: var(--s0);
     }
     p {
         font-size: var(--s0);
