--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,10 @@ import { SITE_TITLE } from '../consts'
 const { pathname } = Astro.url
 ---
 
-<header class="box">
-    <div class="">
-        <div class="box-with-no-border mybg">
-            <h2>{SITE_TITLE}</h2>
-        </div>
+<header class="box invert">
+    <div class="center">
+        <h2>{SITE_TITLE}</h2>
+
         <div class="switcher">
             <HeaderLink href="/">Home</HeaderLink>
             <HeaderLink href="/blog">Blog</HeaderLink>
@@ -18,22 +17,10 @@ const { pathname } = Astro.url
             <HeaderLink href="/mytest">mytest</HeaderLink>
         </div>
     </div>
-
-    <!-- <div class="switcher mybg">
-        <HeaderLink href="/">Home</HeaderLink>
-        <HeaderLink href="/blog">Blog</HeaderLink>
-        <HeaderLink href="/about">About</HeaderLink>
-        <HeaderLink href="/test">Test</HeaderLink>
-        <HeaderLink href="/mytest">mytest</HeaderLink>
-    </div> -->
 </header>
-
 <style>
     .switcher {
         --threshold: 30rem;
         --space: 1rem;
-    }
-    .mybg {
-        background-color: red;
     }
 </style>
