--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -38,7 +38,7 @@ function capitalizeWords(str: string) {
         <GlobalStyle />
     </head>
 
-    <body class:list={['box-no-border', 'center']} color-scheme="dark">
+    <body class:list={['box-no-border', 'center']} color-scheme="light">
         <div class="cover">
             <Header />
             <main>
