--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -13,7 +13,7 @@ function generateRandomString() {
 }
 ---
 
-<div class="box">
+<div class="box-with-no-border">
     <div class="cluster" role="list">
         <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
         <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
