--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,4 +23,16 @@ const { pathname } = Astro.url
         --threshold: 30rem;
         --space: 1rem;
     }
+
+    .center {
+        box-sizing: content-box;
+        margin-inline: auto;
+        text-align: center;
+        max-inline-size: var(--measure);
+        padding-inline-start: 2rem;
+        padding-inline-end: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 </style>
