--- a/src/pages/test-switch.astro
+++ b/src/pages/test-switch.astro
@@ -3,9 +3,8 @@ import Layout from '@layouts/SimpleLayout.astro'
 import Switcher from '@components/customComponents/Switcher/index.astro'
 ---
 
-<!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="switch test" description="Lorem ipsum dolor sit amet">
-    <Switcher limit={5}>
+    <Switcher limit={2} threshold="60ch" space="0">
         <div class="box">hello</div>
         <div class="box">hello</div>
         <div class="box">hello</div>
