remove returns on setters

--- a/src/pages/test-switch.astro
+++ b/src/pages/test-switch.astro
@@ -4,7 +4,7 @@ import Switcher from '@components/customComponents/Switcher/index.astro'
 ---
 
 <Layout title="switch test" description="Lorem ipsum dolor sit amet">
-    <Switcher limit={2} threshold="60ch" space="0">
+    <Switcher limit={5} threshold="60ch" space="1rem">
         <div class="box">hello</div>
         <div class="box">hello</div>
         <div class="box">hello</div>
