--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,20 @@ import Layout from '@layouts/SimpleLayout.astro'
 
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
+import Switcher from '@cc/Switcher/index.astro'
+import Box from '@cc/Box/index.astro'
 ---
 
 <Layout title="home" description="testing css">
-    <div class="stack">
-        <Dialogbox />
-    </div>
+    <Box invert={true}>
+        <h4>switcher</h4>
+        <Switcher threshold="60ch" space="1rem" limit={6}>
+            <Box><p>hello</p></Box>
+            <Box><p>hello</p></Box>
+            <Box><p>hello</p></Box>
+            <Box><p>hello</p></Box>
+        </Switcher>
+    </Box>
+
+    <Dialogbox />
 </Layout>
