--- a/src/pages/test-switch.astro
+++ b/src/pages/test-switch.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import Switcher from '@components/customComponents/Switcher/index.astro'
+import Switcher from '@cc/Switcher/index.astro'
 ---
 
 <Layout title="switch test" description="Lorem ipsum dolor sit amet">
