--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,63 +1,25 @@
 ---
 import type { CollectionEntry } from 'astro:content'
+import Box from '@cc/Box/index.astro'
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import FormattedDate from '../components/FormattedDate.astro'
+import Layout from '@layouts/SimpleLayout.astro'
 
+  
 type Props = CollectionEntry<'blog'>['data']
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props
 ---
 
-<html lang="en">
-    <head>
-        <BaseHead title={title} description={description} />
-        <style>
-            main {
-                width: calc(100% - 2em);
-                max-width: 100%;
-                margin: 0;
-            }
-            .hero-image {
-                width: 100%;
-            }
-            .hero-image img {
-                display: block;
-                margin: 0 auto;
-                border-radius: 12px;
-                box-shadow: var(--box-shadow);
-            }
-            .prose {
-                width: 720px;
-                max-width: calc(100% - 2em);
-                margin: auto;
-                padding: 1em;
-                color: rgb(var(--gray-dark));
-            }
-            .title {
-                margin-bottom: 1em;
-                padding: 1em 0;
-                text-align: center;
-            }
-            .title h2 {
-                margin: 0 0 0.5em 0;
-            }
-            .date {
-                margin-bottom: 0.5em;
-                color: rgb(var(--gray));
-            }
-            .last-updated-on {
-                font-style: italic;
-            }
-        </style>
-    </head>
 
-    <body>
-        <Header />
-        <main>
+<Layout title="blog post" description="Lorem ipsum dolor sit amet">
+    
             <article>
-                <div class="hero-image">
+                <div class="stack">
+                    <Box>
+                <div class="hero-image box">
                     {
                         heroImage && (
                             <img
@@ -69,9 +31,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
                         )
                     }
                 </div>
-                <div class="prose">
-                    <div class="title">
-                        <div class="date">
+                <div class="prose box">
+                    <div class=" box">
+                        <div class="date box">
                             <FormattedDate date={pubDate} />
                             {
                                 updatedDate && (
@@ -82,13 +44,35 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
                                 )
                             }
                         </div>
-                        <h2>{title}</h2>
+                       <div class="box"> <h3>{title}</h3></div>
                         <hr />
                     </div>
                     <slot />
                 </div>
-            </article>
-        </main>
-        <Footer />
-    </body>
-</html>
+            </Box>
+        </div>
+    </article>
+
+    </Layout>
+
+    <style>
+      
+       
+        .hero-image img {
+ 
+            border-radius: 12px;
+            box-shadow: var(--box-shadow);
+        }
+        .prose {
+
+            color: rgb(var(--gray-dark));
+        }
+       
+        .date {
+     
+            color: rgb(var(--gray));
+        }
+        .last-updated-on {
+            font-style: italic;
+        }
+    </style>
