--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,10 +15,10 @@ import Layout from '@layouts/SimpleLayout.astro'
             </p>
         </div>
         <div class="box invert">
-            <p>Invert purus sit amet volutpat. Netus et malesuada fames ac</p>
+            <p>Invert purus sit amet volutc</p>
         </div>
         <div class="box-no-border">
-            <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
+            <p>Sagittis purus sc</p>
         </div>
     </div>
 </Layout>
