--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -1,8 +1,8 @@
 ---
-
+import Box from '@cc/Box/index.astro'
 ---
 
-<div class="box">
+<Box padding=".25rem" borderWidth=".125rem">
     <div class="stack">
         <div class="cluster">
             <div class="pushRight"><button type="button">x</button></div>
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-</div>
+</Box>
 
 <style>
     /* .center {
