--- a/src/components/Switcher.astro
+++ b/src/components/Switcher.astro
@@ -3,22 +3,26 @@
 ---
 
 <div class="box-no-border">
+    <h4>Components</h4>
     <p>
         <code>.switcher</code> - especially useful where each element should be considered
         equal, or part of a continuum.
     </p>
 </div>
-<div class="center">
+
     <div class="switcher">
         <div class="box filled"></div>
         <div class="box filled"></div>
         <div class="box filled"></div>
     </div>
-</div>
+
 
 <style>
     .filled {
         inline-size: 10rem;
         background-color: var(--pink-3);
     }
+
+
 </style>
+
