--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -31,6 +31,11 @@ import 'open-props/postcss/buttons'
         max-inline-size: calc(var(--measure) / 2);
     }
 
+    .docsMain {
+        flex-basis: 0;
+        flex-grow: 999;
+    }
+
     html {
         font-family: var(--font-sans);
         line-height: 1.5;
@@ -107,9 +112,10 @@ import 'open-props/postcss/buttons'
     }
 
     :root {
+        --border-thin: '1px';
         --measure: 60ch;
         --ratio: 1.5;
-
+        --font-size-base: 1rem;
         --s0: var(--font-size-base);
         --s1: calc(var(--s0) * pow(var(--ratio), 1));
         --s2: calc(var(--s0) * pow(var(--ratio), 2));
@@ -117,7 +123,6 @@ import 'open-props/postcss/buttons'
         --s4: calc(var(--s0) * pow(var(--ratio), 4));
         --s5: calc(var(--s0) * pow(var(--ratio), 5));
 
-        --font-size-base: var(--s0);
         --font-size-biggish: var(--s1);
         --font-size-big: var(--s2);
 
@@ -246,8 +251,6 @@ import 'open-props/postcss/buttons'
 
     [class^='box'] {
         color: var(--text-1);
-        background-color: var(--surface-1);
-
         background-color: var(--surface-4);
 
         /* outline: 0.125rem solid transparent;
@@ -255,9 +258,7 @@ import 'open-props/postcss/buttons'
 
         * {
             color: inherit;
-        }
-        + .invert {
-            filter: invert(100%);
+            background-color: inherit;
         }
     }
 
@@ -298,9 +299,10 @@ import 'open-props/postcss/buttons'
     .cluster {
         display: flex;
         flex-wrap: wrap;
-        column-gap: var(--size-fluid-2);
-        row-gap: 1rem;
-        justify-content: flex-start;
+        row-gap: var(--space, var(--size-2));
+        column-gap: var(--space, var(--size-fluid-5));
+        justify-content: space-between;
+        align-items: center;
     }
 
     /* 
@@ -408,6 +410,7 @@ import 'open-props/postcss/buttons'
     main,
     footer {
         max-inline-size: none;
+        background-color: var(--surface-4);
     }
 
     h1 {
@@ -423,7 +426,7 @@ import 'open-props/postcss/buttons'
         font-size: var(--s1);
     }
     h5 {
-        font-size: var(--s0);
+        font-size: var(--s);
     }
     p {
         font-size: var(--s0);
