--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -112,7 +112,7 @@ import 'open-props/postcss/buttons'
     }
 
     :root {
-        --border-thin: '1px';
+        --border-thin: var(--border-size-1);
         --measure: 60ch;
         --ratio: 1.5;
         --font-size-base: 1rem;
